--- a/UnivMedicalRecord/Pages/Homepage/Message.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Message.cshtml
@@ -9,12 +9,66 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-   
+    <!-- Add this script to your head or at the end of the body -->
+    @* <script> *@
+    @*     document.addEventListener("DOMContentLoaded", function () { *@
+    @*         const maxImages = 5; // Maximum allowed images *@
+    @*         const addImageButton = document.getElementById("addImageButton"); *@
+    @*         const imageContainer = document.getElementById("imageContainer"); *@
+    @*         const insertImageLabel = document.getElementById("insertImageLabel"); *@
+    @* *@
+    @*         let imageCount = 0; *@
+    @* *@
+    @*         addImageButton.addEventListener("click", function () { *@
+    @*             if (imageCount < maxImages) { *@
+    @*                 imageCount++; *@
+    @*                 createImageInput(); *@
+    @* *@
+    @*                 if (imageCount === maxImages) { *@
+    @*                     addImageButton.style.display = 'none'; // Hide the "Insert Images" button *@
+    @*                     var maxImagesMessage = document.createElement('span'); *@
+    @*                     maxImagesMessage.innerHTML = 'Maximum 5 images allowed.'; *@
+    @*                     imageContainer.appendChild(maxImagesMessage); *@
+    @*                 } *@
+    @*             } *@
+    @*         }); *@
+    @* *@
+    @*         function createImageInput() { *@
+    @*             const inputContainer = document.createElement("div"); *@
+    @*             inputContainer.classList.add("mt-3"); *@
+    @* *@
+    @*             const input = document.createElement("input"); *@
+    @*             input.setAttribute("type", "file"); *@
+    @*             input.setAttribute("name", "Image" + imageCount); *@
+    @*             input.setAttribute("id", "Image" + imageCount); *@
+    @*             input.addEventListener("change", validateFileType); // Add event listener for file validation *@
+    @*             inputContainer.appendChild(input); *@
+    @* *@
+    @*             imageContainer.appendChild(inputContainer); *@
+    @*         } *@
+    @* *@
+    @*         // File type validation function *@
+    @*         function validateFileType(event) { *@
+    @*             const input = event.target; *@
+    @*             const allowedTypes = ["image/png"]; *@
+    @*             const fileType = input.files[0].type; *@
+    @* *@
+    @*             if (!allowedTypes.includes(fileType)) { *@
+    @*                 alert("Invalid file type. Please select a PNG file."); *@
+    @*                 input.value = ""; // Clear the file input *@
+    @*             } *@
+    @*         } *@
+    @* *@
+    @*         // Hide the initial "Insert Image" label *@
+    @*         insertImageLabel.style.display = 'none'; *@
+    @*     }); *@
+    @* </script> *@
+
 </head>
 <body>
 <form class="form-inline" id="form" method="post">
-            
-<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div>
         <div class="row d-flex justify-content-md-center align-items-center vh-100">
             <div class="col-md-10">
@@ -31,7 +85,7 @@
                                 <select asp-for="Recipient" class="form-select" aria-label="Default select example" required>
                                     <option selected>Choose A Recipient</option>
                                     @{
-                                        foreach(var x in Model.ListOfRecipient)
+                                        foreach (var x in Model.ListOfRecipient)
                                         {
                                             <option value="@x.Username">@x.Username</option>
                                         }
@@ -45,7 +99,6 @@
                                 <textarea asp-for="message" class="form-control" rows="12" placeholder="Enter A Message"> </textarea>
                                 <span asp-validation-for="message" class="text-danger"></span>
                             </div>
-
                         </div>
                         <div class="card-footer">
                             <button type="submit" class="btn btn-dark" asp-page-handler="Send">Send</button>
@@ -56,7 +109,7 @@
             </div>
         </div>
     </div>
-    
+
 </form>
 </body>
 </html>
